--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,21 @@ body {
   text-align: center;
   text-transform: uppercase;
 }
+
+.footer {
+  background-color: var(--bg-color-2);
+  height: 15vh;
+  border: 1px solid transparent;
+}
+
+.switchpage-btn-container {
+  background-color: var(--bg-color-1);
+  border-radius: 20px;
+  text-align: center;
+  max-width: 120px;
+  margin: 0 auto;
+}
+
+.switchpage-btn-container h6 {
+  padding-left: 5px;
+}
