--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,14 @@
 }
 
 :root {
-  --bg-color-1: #fff1f2;
-  --bg-color-2: #451a03;
-  --bg-color-3: #fecaca;
-  --font-color-1: #451a03;
-  --font-color-2: #fff1f2;
+  --bg-color-1: #F6F1EE;
+  --bg-color-2: #4F4A45;
+  --bg-color-3: #ffedd5;
+  --bg-color-4: #ED7D31;
+  --bg-color-5: #fecaca;
+  --font-color-1: #4F4A45;
+  --font-color-2: #F6F1EE;
+  --font-color-3: #6C5F5B;
 }
 
 body {
@@ -17,10 +20,20 @@ body {
   color: var(--font-color-1);
 }
 
-/* admin portion */
-.admin-side-bar {
-  border: 1px solid red;
+/* footer */
+.switchpage-btn-container {
+  background-color: var(--bg-color-2);
+  border-radius: 15px;
+  text-align: center;
+  max-width: 120px;
+  margin: 25px auto;
 }
+
+.switchpage-btn-container h6 {
+  padding-left: 5px;
+}
+
+/* admin portion */
 
 .admin-form-container {
   background-color: var(--bg-color-3);
@@ -34,10 +47,6 @@ body {
   border-radius: 5px;
 }
 
-.admin-main {
-  border: 1px solid green;
-}
-
 .admin-form-upload {
   padding: 10px 0;
 }
@@ -47,29 +56,27 @@ body {
   justify-content: space-between;
 }
 
+/* meals portion */
 .meals-container h4 {
   text-align: center;
   text-transform: uppercase;
 }
 
-.footer {
-  background-color: var(--bg-color-2);
-  height: 15vh;
-  border: 1px solid transparent;
+.meal-price {
+  padding-top: 10px;
 }
 
-.switchpage-btn-container {
-  background-color: var(--bg-color-1);
-  border-radius: 20px;
-  text-align: center;
-  max-width: 120px;
-  margin: 0 auto;
+.text-ellipsis {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  min-height: 65px;
 }
 
-.switchpage-btn-container h6 {
-  padding-left: 5px;
-}
+/* users portion */
 
+/* users cart */
 .dialog-title {
   text-align: center;
 }
@@ -78,8 +85,6 @@ body {
   min-width: 400px;
   font-size: 18px;
 }
-
-
 
 .item-details {
   width: 40%;
@@ -118,7 +123,4 @@ body {
   padding-top: 10px;
   display: flex;
   justify-content: space-between;
-}
-
-.clear-all-btn {
 }
