--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,15 @@ body {
   color: var(--font-color-1);
 }
 
+/* banner */
+.food-banner img {
+  width: 100%;
+  height: 20vh;
+  object-fit: cover;
+  object-position: 100% 28%;
+  overflow: hidden;
+}
+
 /* footer */
 .switchpage-btn-container {
   background-color: var(--bg-color-2);
